# ota-

./: .gitignore  Cargo.toml  README.md  test2.otag  test_error.otag  test_semantic.otag  test_type_error.otag
.github/: copilot-instructions.md
.github/prompts/: orchestrate.prompt.md
.specify/memory/: constitution.md  spec.md
.specify/memory/spec/: spec.md
.specify/scripts/powershell/: create-new-feature.ps1
docs/: klavuz.md  tanıtım.md
examples/: advanced_math.otağ  api_demo.rs  basic.otağ  circular_a.otağ  circular_b.otağ  control-flow.otağ  expressions.otağ  import-test.otağ  matematik.otağ  nested-import.otağ  types.otağ  utils.otağ
otağ-compiler/: test.otag  test2.otag
otağ-compiler/src/: ast.rs  codegen.rs  grammar.pest  main.rs  parser.rs
specs/: roadmap.md
specs/001-add-variable-output/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-control-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-add-functions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-add-data-structures/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-add-error-handling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: ast.rs  codegen.rs  error_reporting.rs  grammar.pest  lexer.rs  lib.rs  location.rs  main.rs  parser.rs  semantic.rs  symbol_table.rs  types.rs
tests/: test_error_handling.rs  test_imports.rs  test_in_memory.rs
tests/integration/: test_functions.rs
(+21 files in other folders)
