[package]
name = "otağ-compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "otag"
path = "src/lib.rs"

[[bin]]
name = "otağ-compiler"
path = "src/main.rs"

[[example]]
name = "api_demo"
path = "examples/api_demo.rs"

[dependencies]
logos = "0.13"
pest = "2.7"
pest_derive = "2.7"
clap = { version = "4.0", features = ["derive"] }
